--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,7 @@ img {
     display: flex;
     padding-bottom: 120px;
 }
+
 .product__item-food:nth-child(even) {
     flex-direction: row-reverse;
 }
@@ -399,7 +400,7 @@ img {
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
-    color: rgba(0, 0, 0, 0.7);  
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .review__text {
@@ -455,8 +456,7 @@ img {
     transform: translate(0px, -50%);
 }
 
-.avatars-slider__ctrl {
-}
+.avatars-slider__ctrl {}
 
 .avatars-slider__ctrl_direction_prev {
     transform: scale(-1, 1);
@@ -469,12 +469,357 @@ img {
 .avatars-slider__list {
     display: flex;
 }
-.avatars-slider__item {
-}
-.avatar {
-}
-.avatar__img {
-}
+
+.avatars-slider__item {}
+
+.avatar {}
+
+.avatar__img {}
+
 .active {
     border: 1px solid #D64374;
+}
+
+.downloadlinks__section {
+    height: 678px;
+    background-color: #F8EDF0;
+}
+
+.downloadlinks {
+
+    display: flex;
+
+    justify-content: space-between;
+}
+
+.downloadlinks__img-container {
+    width: 305px;
+    height: 627px;
+    margin-top: 8.11%;
+}
+
+.downloadlinks__phone {
+    width: 100%;
+}
+
+.downloadlinks__text-container {
+    width: 620px;
+    margin-top: 13.2%;
+}
+
+.downloadlinks__h1 {}
+
+.dodownloadlinks__text-desc {
+    margin-top: 2.94%;
+}
+
+.downloadlinks__ul {
+    margin-top: 4.57%;
+}
+
+.downloadlinks__item {
+    padding-bottom: 19px;
+    display: flex;
+    align-items: center;
+}
+
+.downloadlinks__item-link {
+    width: 30px;
+    height: 30px;
+    background-color: #ffffff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+}
+
+.downloadlinks__item-img {
+    width: 11px;
+    height: 16.5px;
+}
+
+.downloadlinks__item:last-child {
+    padding: 0;
+}
+
+.downloadlinks__desc {
+    margin-left: 10px;
+}
+
+.app__market {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.questions {}
+
+.questions__block {
+    height: 545px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.questions__block-items {
+    width: 637px;
+    height: 225px;
+}
+
+.questions__block-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 52px;
+    text-align: center;
+    color: #000000;
+    width: 522px;
+}
+
+.questions__form {
+    width: 637px;
+    height: 74px;
+
+}
+
+.questions__block-form {
+    display: flex;
+    background: #FAFAFA;
+    border-radius: 5px;
+}
+
+.questions__text {
+    width: 80%;
+    height: 74px;
+    margin: 0;
+    background: #FAFAFA;
+    border-radius: 5px;
+    border: #ffffff;
+}
+
+.questions__submit {
+    border: #ffffff;
+    width: 19%;
+    height: 74px;
+    background: #D64374;
+    border-radius: 5px;
+    margin: 0;
+}
+
+.footer {
+    height: 382px;
+    background-color: #000000;
+    display: flex;
+}
+
+.footer__items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 382px;
+}
+
+.socialnetwork {
+    width: 207px;
+
+}
+
+.footer__logo {
+    width: 79px;
+    height: 79px;
+    margin-bottom: 9px;
+}
+
+.logo {}
+
+.logo__pic {
+    width: 100%;
+}
+
+.somefood {
+    width: 207px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 17px;
+    letter-spacing: 0.01em;
+
+    color: #FFFFFF;
+
+    opacity: 0.7;
+    margin-bottom: 25px;
+}
+
+
+
+.FllowUs {}
+
+.FllowUs__text {
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+
+    /* identical to box height */
+
+    color: #FFFFFF;
+    margin-bottom: 9px;
+}
+
+.social {
+    display: flex;
+    width: 90px;
+    height: 15px;
+    justify-content: space-between;
+}
+
+.social__item {
+    width: 15px;
+    height: 15px;
+}
+
+.social__img {
+    width: 100%;
+}
+
+.footer__navigation {
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+}
+
+
+.footer__navigation-item {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+
+    color: #FFFFFF;
+
+    opacity: 0.7;
+
+    margin-bottom: 10px;
+}
+
+.footer__navigation-item:last-child {
+    margin: 0;
+}
+
+.footer__navigation-item:hover {
+    opacity: 1;
+    color: rgb(255, 255, 255);
+}
+
+.footer__information {
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+}
+
+.footer__information-item {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+
+    color: #FFFFFF;
+
+    opacity: 0.7;
+
+    margin-bottom: 10px;
+
+}
+
+.footer__information-item:last-child {
+    margin: 0;
+}
+
+.Newsletter {
+    padding-left: 50px;
+}
+
+.Newsletter__text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    padding-left: 130px;
+
+    /* identical to box height */
+
+    color: #FFFFFF;
+
+
+}
+
+.Subscribe__form {
+    opacity: 0.5;
+    border: 2px solid #D64374;
+    border-radius: 5px;
+    height: 55px;
+    width: 388px;
+}
+
+.Subscribe__text {
+    width: 253px;
+    background-color: rgba(255, 255, 255, 0);
+    border: 0;
+    height: 55px;
+    color: #FFFFFF;
+}
+
+.Subscribe__submit {
+    width: 125px;
+    background: #D64374;
+    margin: 0;
+    border: #FFFFFF;
+    height: 100%;
+}
+
+.paymentsystems {
+    display: flex;
+    margin-top: 15px;
+    column-gap: 15px;
+    align-items: center;
+    padding-left: 50px;
+}
+
+.PP {
+    height: 19px;
+    width: 17px;
+}
+
+.PP__img {
+    width: 100%;
+}
+
+.mastercard {
+    width: 34px;
+    height: 20px;
+}
+
+.mastercard__img {
+    width: 100%;
+}
+
+.visa {
+    width: 47px;
+    height: 15px;
+}
+
+.visa__img {
+    width: 100%;
 }
